dataset/local/tf_s3_cloudtrail_logging/resource.yaml
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: good-plan
terraform_version: "1.6.6"
planned_values:
  root_module:
    resources:
      - type: aws_s3_bucket
        values:
          bucket: my-cloudtrail-bucket
      - type: aws_cloudtrail
        values:
          name: my-trail
          s3_bucket_name: my-cloudtrail-bucket
          enable_logging: true
---
apiVersion: terraform.io/v1
kind: Plan
metadata:
  name: bad-plan
terraform_version: "1.6.6"
planned_values:
  root_module:
    resources:
      - type: aws_s3_bucket
        values:
          bucket: my-bad-cloudtrail-bucket
      - type: aws_cloudtrail
        values:
          name: my-bad-trail
          s3_bucket_name: my-bad-cloudtrail-bucket
          enable_logging: false
