dataset/local/tf_s3_cloudtrail_logging/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: enable-aws-cloudtrail
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: enable-aws-cloudtrail
    kind: Plan
    resources:
      - good-plan
    result: pass
  - policy: enable-aws-cloudtrail
    kind: Plan
    resources:
      - bad-plan
    result: fail
